--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:prod": "NODE_ENV=production node scripts/start-production.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "validate:env": "node -e \"require('./scripts/validate-env')()\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend service for NadRacer game on Monad blockchain",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
-    "pg": "^8.13.3"
+    "pg": "^8.13.3",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
+    "winston": "^3.11.0",
+    "express-validator": "^7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
